--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1822,7 +1822,7 @@ body.body {
   font-weight: 500;
   line-height: 14px; /* 100% */
   text-transform: uppercase;
-  color: #4D32A5;
+  color: #3B1E54;
 }
 .heading3 .title span.span img {
   margin-top: -4px;
@@ -2453,7 +2453,7 @@ body.body {
 .theme-btn2 {
   display: inline-block;
   border-radius: 80px;
-  background: #4D32A5;
+  background: #3B1E54;
   padding: 12px 12px 12px 18px;
   color: #FFF;
   font-size: 18px;
@@ -2486,7 +2486,7 @@ body.body {
   background-color: #fff;
   border-radius: 50%;
   font-size: 16px;
-  color: #4D32A5;
+  color: #3B1E54;
   text-align: center;
   line-height: 32px;
   margin-left: 5px;
@@ -2797,7 +2797,7 @@ body.body {
   transition: all 0.4s;
 }
 .about1 .about3-boxs .about3-box .icon {
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   height: 80px;
   width: 80px;
   line-height: 80px;
@@ -2829,7 +2829,7 @@ body.body {
 .about1 .about3-boxs .about3-box:hover {
   transition: all 0.4s;
   transform: translateY(-10px);
-  background-color: #4D32A5;
+  background-color: #3B1E54;
 }
 .about1 .about3-boxs .about3-box:hover .icon {
   background-color: #5F46AE;
@@ -3100,7 +3100,7 @@ body.body {
   transition: all 0.4s;
 }
 .about5 .about3-boxs .about3-box .icon {
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   height: 80px;
   width: 80px;
   line-height: 80px;
@@ -3132,7 +3132,7 @@ body.body {
 .about5 .about3-boxs .about3-box:hover {
   transition: all 0.4s;
   transform: translateY(-10px);
-  background-color: #4D32A5;
+  background-color: #3B1E54;
 }
 .about5 .about3-boxs .about3-box:hover .icon {
   background-color: #5F46AE;
@@ -3833,7 +3833,7 @@ body.body {
   display: inline-block;
   line-height: 48px;
   text-align: center;
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   border-radius: 50%;
   color: #fff;
   font-size: 20px;
@@ -4418,7 +4418,7 @@ body.body {
   display: inline-block;
   line-height: 48px;
   text-align: center;
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   border-radius: 50%;
   color: #fff;
   font-size: 20px;
@@ -5145,7 +5145,7 @@ body.body {
   width: 48px;
   border-radius: 50%;
   z-index: 1;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .faq3 .accordion .accordion-item button::before {
@@ -5184,7 +5184,7 @@ body.body {
 .faq3 .accordion .accordion-item.active {
   transition: all 0.4s;
   border-radius: 14px;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 .faq3 .accordion .accordion-item.active button {
   color: #fff;
@@ -6638,7 +6638,7 @@ body.body {
   font-weight: 500;
   line-height: 14px; /* 100% */
   text-transform: uppercase;
-  color: #4D32A5;
+  color: #3B1E54;
 }
 .hero3 .main-heading .title span.span img {
   margin-top: -4px;
@@ -7834,7 +7834,7 @@ body.body {
 .pricing3 .pricing-box .button .theme-btn1 {
   display: inline-block;
   border-radius: 80px;
-  background: #4D32A5;
+  background: #3B1E54;
   padding: 12px 12px 12px 18px;
   color: #FFF;
   font-size: 18px;
@@ -7867,7 +7867,7 @@ body.body {
   background-color: #fff;
   border-radius: 50%;
   font-size: 16px;
-  color: #4D32A5;
+  color: #3B1E54;
   text-align: center;
   line-height: 32px;
   margin-left: 5px;
@@ -7875,7 +7875,7 @@ body.body {
   transition: all 0.4s;
 }
 .pricing3 .pricing-box .button .theme-btn1:hover {
-  color: #4D32A5;
+  color: #3B1E54;
   transition: all 0.4s;
 }
 .pricing3 .pricing-box .button .theme-btn1:hover::after {
@@ -7885,7 +7885,7 @@ body.body {
   right: auto;
 }
 .pricing3 .pricing-box .button .theme-btn1:hover span {
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   color: #fff;
   transition: all 0.4s;
 }
@@ -7964,7 +7964,7 @@ body.body {
   border-radius: 50%;
   z-index: 1;
   transition: all 0.4s;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 .pricing3 .pricing-box .pricing-list li span::after {
   content: "";
@@ -8106,7 +8106,7 @@ body.body {
   border-radius: 50%;
   position: relative;
   font-size: 12px;
-  color: #4D32A5;
+  color: #3B1E54;
   margin-right: 8px;
   transition: all 0.4s;
 }
@@ -8124,7 +8124,7 @@ body.body {
   border-radius: 50%;
   z-index: 1;
   transition: all 0.4s;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 .pricing3 .pricing-box:hover .pricing-list li span::after {
   content: "";
@@ -8144,7 +8144,7 @@ body.body {
   margin-top: 24px;
 }
 .pricing3 .pricing-box:hover .button .theme-btn1 {
-  color: #4D32A5;
+  color: #3B1E54;
   transition: all 0.4s;
 }
 .pricing3 .pricing-box:hover .button .theme-btn1::after {
@@ -8154,7 +8154,7 @@ body.body {
   right: auto;
 }
 .pricing3 .pricing-box:hover .button .theme-btn1 span {
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   color: #fff;
   transition: all 0.4s;
 }
@@ -8252,7 +8252,7 @@ body.body {
   border-radius: 50%;
   position: relative;
   font-size: 12px;
-  color: #4D32A5;
+  color: #3B1E54;
   margin-right: 8px;
   transition: all 0.4s;
 }
@@ -8270,7 +8270,7 @@ body.body {
   border-radius: 50%;
   z-index: 1;
   transition: all 0.4s;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 .pricing3 .pricing-box.active .pricing-list li span::after {
   content: "";
@@ -8290,7 +8290,7 @@ body.body {
   margin-top: 24px;
 }
 .pricing3 .pricing-box.active .button .theme-btn1 {
-  color: #4D32A5;
+  color: #3B1E54;
   transition: all 0.4s;
 }
 .pricing3 .pricing-box.active .button .theme-btn1::after {
@@ -8300,7 +8300,7 @@ body.body {
   right: auto;
 }
 .pricing3 .pricing-box.active .button .theme-btn1 span {
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   color: #fff;
   transition: all 0.4s;
 }
@@ -8612,7 +8612,7 @@ body.body {
   border-radius: 50%;
   position: relative;
   font-size: 12px;
-  color: #4D32A5;
+  color: #3B1E54;
   margin-right: 8px;
   transition: all 0.4s;
 }
@@ -8758,7 +8758,7 @@ body.body {
   border-radius: 50%;
   position: relative;
   font-size: 12px;
-  color: #4D32A5;
+  color: #3B1E54;
   margin-right: 8px;
   transition: all 0.4s;
 }
@@ -10222,7 +10222,7 @@ body.body {
   border-radius: 80px;
   background: #fff;
   padding: 12px 12px 12px 18px;
-  color: #4D32A5;
+  color: #3B1E54;
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
@@ -10250,7 +10250,7 @@ body.body {
   display: inline-block;
   height: 32px;
   width: 32px;
-  background-color: #4D32A5;
+  background-color: #3B1E54;
   border-radius: 50%;
   font-size: 16px;
   color: #fff;
@@ -10333,7 +10333,7 @@ body.body {
 
 .loading.loading2 {
   border: 1px solid transparent;
-  border-color: transparent #4D32A5 transparent #4D32A5 !important;
+  border-color: transparent #3B1E54 transparent #3B1E54 !important;
   animation: rotate-loading 1.5s linear 0s infinite normal;
   transform-origin: 50% 50%;
 }
@@ -11215,7 +11215,7 @@ body.body {
   transform: rotate(-90deg);
 }
 .tes3 .testimonial7-all .pagination-buttons button i {
-  background: #4D32A5;
+  background: #3B1E54;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -11223,7 +11223,7 @@ body.body {
 }
 .tes3 .testimonial7-all .pagination-buttons button:hover {
   transition: all 0.4s;
-  background: #4D32A5;
+  background: #3B1E54;
 }
 .tes3 .testimonial7-all .pagination-buttons button:hover i {
   background: var(--Home-Page-7-Linner-Color, linear-gradient(90deg, #ffffff 0%, #ffffff 100%));
@@ -12557,7 +12557,7 @@ body.body {
   top: 0;
   height: 100%;
   width: 100%;
-  background: #4D32A5;
+  background: #3B1E54;
   z-index: 2;
   border-radius: 50%;
 }
@@ -12586,7 +12586,7 @@ body.body {
   top: 0;
   height: 100%;
   width: 100%;
-  background: #4D32A5;
+  background: #3B1E54;
   z-index: 2;
   border-radius: 50%;
   transition: all 0.4s;
@@ -12613,7 +12613,7 @@ body.body {
   width: 100%;
   height: 100%;
   border-radius: 100px;
-  background: #4D32A5;
+  background: #3B1E54;
   z-index: 1;
   transition: all 0.4s;
   transform: scale(0.4);
@@ -12686,7 +12686,7 @@ body.body {
   width: 100%;
   height: 100%;
   border-radius: 8px;
-  background: #4D32A5;
+  background: #3B1E54;
   z-index: 1;
   transition: all 0.4s;
   transform: scale(1);
@@ -12746,7 +12746,7 @@ body.body {
   width: 100%;
   height: 100%;
   border-radius: 8px;
-  background: #4D32A5;
+  background: #3B1E54;
   z-index: 1;
   transition: all 0.4s;
   transform: scale(1);
@@ -13832,7 +13832,7 @@ body.body {
   text-align: center;
   color: #fff;
   border: none;
-  background: #4D32A5;
+  background: #3B1E54;
   position: absolute;
   right: 7px;
   top: 7px;
@@ -13882,7 +13882,7 @@ body.body {
 }
 .footer3 .menu-list ul li a:hover {
   transition: all 0.4s;
-  color: #4D32A5;
+  color: #3B1E54;
   transform: translateX(5px);
 }
 .footer3 .menu-list.contact-list {
@@ -13907,7 +13907,7 @@ body.body {
 }
 .footer3 .menu-list.contact-list .contact-box .pera a:hover {
   transition: all 0.4s;
-  color: #4D32A5;
+  color: #3B1E54;
 }
 .footer3 .footer-border {
   height: 1px;
@@ -13971,7 +13971,7 @@ body.body {
   left: 0;
   height: 100%;
   width: 100%;
-  background: #4D32A5;
+  background: #3B1E54;
   border-radius: 50%;
   z-index: -1;
   opacity: 0;
@@ -14083,7 +14083,7 @@ body.body {
 }
 .footer5 .menu-list ul li a:hover {
   transition: all 0.4s;
-  color: #4D32A5;
+  color: #3B1E54;
   transform: translateX(5px);
 }
 .footer5 .menu-list.contact-list {
@@ -14108,7 +14108,7 @@ body.body {
 }
 .footer5 .menu-list.contact-list .contact-box .pera a:hover {
   transition: all 0.4s;
-  color: #4D32A5;
+  color: #3B1E54;
 }
 .footer5 .footer-border {
   height: 1px;
@@ -14202,7 +14202,7 @@ body.body {
 }
 
 .header-area.header-area5 .header-elements .main-menu-ex ul li a.active {
-  color: #4D32A5;
+  color: #3B1E54;
 }
 
 /*
